# magic_duckdb

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  duckdb_readme.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: bump_beta_rc.yml  dependabot.yml  dev_test.yml  python-package.yml  python-publish.yml  scorecard.yml  tag_release.yml
magic_duckdb/: __init__.py  _version.py  autocompletion.py  duckdb_mode.py  explain_analyze_graphviz.py  logging_init.py  magic.py  sqlformatter.py
magic_duckdb/autocomplete/: autocompletion_v1.py  autocompletion_v2.py  common.py
magic_duckdb/extras/: ast_graphviz.py  autocompletion.py  explain_analyze_graphviz.py  jinja_template.py  logging_init.py  sql_ai.py  sqlformatter.py
notebooks/: ai_examples.ipynb  autocompletion.ipynb  benchmarking.ipynb  examples.ipynb  explain_with_graphviz.ipynb  format_examples.ipynb  graphviz_examples.ipynb  parameters.ipynb  plan_examples.ipynb  reconnect.ipynb  requirements.txt  sql_formatting.ipynb  test_query_jinja.sql
tests/: conftest.py  test_autocomplete.py  test_connections.py  test_jinja.py  test_notebooks.py  test_outputs.py  test_query_file.sql  test_read_file.py  test_types.py
